# fasterkernels

./: .gitignore  Readme.md  pyproject.toml
.github/workflows/: publish.yaml  publish.yml
benchmark_plots/: raw_benchmarks.csv
benchmarks/: bench_fd_gqa_varlen.py  benchmark.py  benchmark_engine.py  compare_hf_model.py  compare_hf_model_fp8.py  cuda_graphs_vs_torch_compile_hf.txt  hf_bench_out.txt  hf_torch_compile_baseline.py  run_hf_model_triton.py  run_hf_model_triton_fp8.py  run_hf_triton_fp8_paged.py
benchmarks/benchmark_plots/: raw_benchmarks.csv
fskernels/cuda/: cuda_fa2.py  cuda_fd_gqa.py  flash_attn_api.cpp  flash_attn_cuda.cu  flash_decode_api.cpp  flash_decode_cuda.cu
fskernels/engine/: __init__.py  cuda_graph_runner.py  fs_inference_engine.py  speculative_engine.py
fskernels/paged_attn/: __init__.py  paged_kv_cache.py  triton_paged_attn.py
fskernels/tilelang/: tilelang_fa2.py  tilelang_gqa_decode.py
fskernels/triton/: triton_fa2.py  triton_gqa_decode.py  triton_gqa_decode_hf.py  triton_gqa_decode_hf_fp8.py
profile/: profile_triton_fa2.py  profile_triton_fd_gqa.py
profiling/: profile_triton_fa2.py  profile_triton_fd_gqa.py
profiling/triton_ir/triton_fa2/: _flash_attn_fwd_kernel.llir  _flash_attn_fwd_kernel.ptx  _flash_attn_fwd_kernel.ttgir  _flash_attn_fwd_kernel.ttir
tests/: run_hf_triton_fp8_cuda_gph.py  run_hf_triton_fp8_paged.py  test_cuda_fa2.py  test_cuda_fd_gqa.py  test_tilelang_fa2.py  test_tilelang_fd_gqa.py  test_triton_fa2.py  test_triton_fd_gqa.py  test_triton_gqa_decode_fp8.py  test_triton_paged_gqa_decode.py
(+2 files in other folders)
